# cs-3307-group28

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  torquedesk.db
shared/include/: constants.h  dto.h
src/client/: CMakeLists.txt  HomePage.cpp  HomePage.h  LandingPage.cpp  LandingPage.h  LoginPage.cpp  LoginPage.h  MainWindow.cpp  MainWindow.h  PasswordResetPage.cpp  PasswordResetPage.h  SignUpPage.cpp  SignUpPage.h  main.cpp
src/client/Customer/: AppointmnetDetailPage.cpp  AppointmnetDetailPage.h  BookAppointmentsPage.cpp  BookAppointmentsPage.h  FindAppointmentsPage.cpp  FindAppointmentsPage.h  JobTrackingPage.cpp  JobTrackingPage.h  LeaveReviewPage.cpp  LeaveReviewPage.h  MechanicProfilePage.cpp  MechanicProfilePage.h  MechanicReviewsPage.cpp  MechanicReviewsPage.h  MyAppointmentsPage.cpp  MyReviews.cpp  MyReviews.h  MyVehiclesPage.cpp  MyVehiclesPage.h  main.cpp
src/client/MainWindows/: EditProfilePage.cpp  EditProfilePage.h  HomePage.cpp  LandingPage.h  MessagesPage.cpp  MessagesPage.h  SignUpPage.h
src/client/Mechanic/: JobDetailPage.cpp  JobDetailPage.h  MechanicDashboardPage.cpp  MechanicDashboardPage.h  MyAppointmentsPage.cpp  MyAppointmentsPage.h  MyJobsPage.cpp  MyJobsPage.h
src/client/api/: TorqueNetworkManager.cpp  TorqueNetworkManager.h
src/client/services/: AuthService.cpp  AuthService.h
src/engine/: AuthService.cpp  AuthService.h  CMakeLists.txt  CustomerService.cpp  CustomerService.h  DTO.h  DTOSerialization.h  DatabaseManager.cpp  DatabaseManager.h  DefaultCustomerValidator.h  MechanicService.cpp  MechanicService.h  ProfitabilityEngine.cpp  ProfitabilityEngine.h  RatingEngine.cpp  RatingEngine.h  Records.h  RecordsSerialization.h
src/server/: AuthInfo.h  CMakeLists.txt  HttpSession.cpp  HttpSession.h  JwtManager.h  README.md  Server.cpp  Server.h  ServiceContext.h  Session.cpp  Session.h  http_utils.h  main.cpp
src/server/endpoints/: Appointments.cpp  Appointments.h  Customers.cpp  Customers.h  EndpointHandler.h  Jobs.cpp  Jobs.h  Mechanics.cpp  Mechanics.h  Reviews.cpp  Reviews.h  Symptoms.cpp  Symptoms.h  Users.cpp  Users.h  Vehicles.cpp  Vehicles.h
tests/: CMakeLists.txt  test_auth_service.cpp  test_customer_service.cpp  test_engine.cpp  test_mechanic_service.cpp
